# caretaker

./: .caretaker-memory.db  .caretaker.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.mcp  README.md  UPGRADE_GUIDE.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  plan.md  pyproject.toml  releases.json
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  release.yml
.github/agents/: README.md  claude-code-guidelines.md  maintainer-issue.md  maintainer-pr.md  maintainer-upgrade.md
.github/codeql/: codeql-config.yml
.github/maintainer/: config.yml
.github/skills/: README.md  caretaker-config.md  caretaker-debug.md  caretaker-qa-cycle.md  caretaker-repo-settings.md  caretaker-setup.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  deploy-mcp.yml  docs.yml  enforce-gate.yml  fleet-lag-report.yml  maintainer.yml  nightly-eval.yml  release-prepare.yml  release-publish.yml  release.yml  update-releases-json.yml
docs/: admin-dashboard-activation.md  agents.md  architecture.md  azure-backend-adoption-roadmap.md  azure-backend-expansion-brainstorm.md  azure-mcp-architecture-plan.md  causal-chains.md  configuration.md  custom-coding-agent-e2e.md  custom-coding-agent-plan.md  development.md  fleet-opt-in-runbook.md  fleet-qa-2026-04-28.md  fleet-registry.md  fleet.yml  getting-started.md  github-app-phase2.md  github-app-plan.md  github-app-rollout.md  github-app-spike.md  goals.md  index.md  memory-graph-plan.md  metrics-plan.md  observability.md  pr-ownership.md  qa-findings-2026-04-23.md  qa-findings-2026-04-27.md  refactor-plan.md  release-notes.md  review-agent-plan.md  skills-and-agents-plan.md
docs/plans/: 2026-04-22-audio_engineer-bootstrap.md  2026-04-22-fleet-audit.md  2026-04-22-qa-scenario-11-prompt-cache.md  2026-04-22-source-audit.md  2026-04-25-qa-orchestration-test-plan.md  2026-04-25-repo-settings-skill-plan.md  2026-Q2-agentic-migration.md  2026-architecture-review-langgraph-backbench.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/k8s/: caretaker-agent-worker.yaml  caretaker-mcp-deployment.yaml  caretaker-mcp-pdb.yaml  caretaker-mcp-service.yaml  caretaker-mcp-serviceaccount.yaml  caretaker-virtualservice.yaml  neo4j-statefulset.yaml  redis-statefulset.yaml
k8s/flux/: README.md
schema/: config.v1.schema.json
scripts/: check_enforce_gate.py  deploy-mcp.sh  test-mcp-local.sh
setup-templates/: SETUP_AGENT.md
setup-templates/templates/: config-default.yml
site/: 404.html  index.html  search.html  sitemap.xml
site/agents/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/development/: index.html
site/getting-started/: index.html
site/refactor-plan/: index.html
site/release-notes/: index.html
site/search/: search_index.json
src/caretaker/: __init__.py  agent_protocol.py  agents.py  causal.py  causal_chain.py  claude_code_executor.py  cli.py  config.py  dedupe.py  doctor.py  orchestrator.py  registry.py
src/project_maintainer/: __init__.py  cli.py  config.py  orchestrator.py
templates/: maintainer.yml
tests/: conftest.py  test_agents.py  test_attribution_metrics.py  test_audit_log.py  test_backfill_attribution.py  test_bootstrap_agent.py  test_causal.py  test_causal_chain.py  test_charlie_agent.py  test_claude_code_executor.py  test_cli.py  test_config.py  test_crystallizer_category_shadow.py  test_dedup.py  test_dedupe.py  test_dependency_agent.py  test_dependency_bisector.py  test_devops_agent.py  test_docs_agent.py  test_doctor.py  test_doctor_llm_env.py  test_doctor_llm_probe.py  test_escalation_agent.py  test_eventbus.py  test_eventbus_webhook_integration.py  test_evolution.py  test_evolution_executor_routing.py  test_evolution_mongo_backend.py  test_evolution_state_machine.py  test_fix_ladder.py  test_fix_ladder_metrics.py  test_fix_ladder_sandbox.py  test_fleet_alerts.py  test_fleet_dispatch_activity.py  test_fleet_graph.py  test_fleet_registry.py  test_fleet_skill_promotion_roundtrip.py  test_fleet_sqlite_store.py  test_fleet_version_drift.py  test_github_client.py  (+57 more)
tests/eval/: test_admin_eval_api.py  test_gate.py  test_harness.py  test_harness_per_model.py  test_scorers.py
tests/evolution/: test_shadow_decision_model_override.py
tests/regressions/: __init__.py  test_copilot_fixture_bugs.py
tests/test_admin/: test_attribution_api.py  test_causal_store.py  test_causal_store_persistence.py  test_data.py
tests/test_coding_agents/: test_dispatcher_byoca.py  test_doctor_byoca.py  test_handoff.py  test_orchestrator_registry.py  test_pr_reviewer_backend.py  test_registry.py
tests/test_foundry/: conftest.py  test_copilot_compat.py  test_dispatcher.py  test_executor.py  test_executor_forks_and_tokens.py  test_size_classifier.py  test_tool_loop.py  test_tools.py  test_workspace.py  test_zero_regression.py
tests/test_github_app/: conftest.py  test_agent_runner.py  test_comment_gate.py  test_config_cache.py  test_context_factory.py  test_credentials.py  test_dispatch_guard.py  test_dispatcher.py  test_events.py  test_installation_tokens.py  test_jwt_signer.py  test_webhooks.py
tests/test_goals/: __init__.py  test_definitions.py  test_engine.py
tests/test_issue_agent/: __init__.py  test_agent.py  test_classifier.py  test_dispatcher.py  test_issue_triage.py  test_triage_llm.py
tests/test_pr_agent/: test_agent.py  test_cascade.py  test_cascade_llm.py  test_ci_triage.py  test_ci_triage_llm.py  test_copilot_protocol.py  test_merge.py  test_ownership.py  test_pr_triage.py  test_readiness_llm.py  test_review.py  test_review_llm.py  test_shepherd.py  test_shepherd_adapter.py  test_states.py  test_stuck_pr_llm.py
tests/test_review_agent/: test_agent.py  test_models.py
tests/test_runs/: test_api.py  test_github_oidc.py  test_shipper.py  test_store.py  test_tokens.py
tests/test_upgrade_agent/: __init__.py  test_agent.py  test_planner.py  test_release_checker.py
tests/test_upgrade_paths/: __init__.py  test_upgrade_paths.py
(+328 files in other folders)
