[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caretaker"
version = "0.6.4"
description = "Autonomous GitHub repository maintenance powered by Copilot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Caretaker Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27,<1",
    "pyyaml>=6,<7",
    "click>=8,<9",
    "pydantic>=2,<3",
    "anthropic>=0.40,<1",
    "packaging>=24,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "respx>=0.22,<1",
    "types-PyYAML>=6,<7",
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "httpx>=0.27,<1",
    "pyjwt[crypto]>=2.8,<3",
    # Phase 1 backend deps (stubs + fake implementations used in tests)
    "motor>=3.3,<4",
    "redis[asyncio]>=5,<6",
    "types-redis>=4.6,<5",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]
# Enables the optional GitHub App front-end (JWT minting, webhook receiver).
# See docs/github-app-plan.md.
github-app = [
    "pyjwt[crypto]>=2.8,<3",
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
]
# Phase 1 — Durable state and cache (MongoDB + Redis; see docs/azure-backend-adoption-roadmap.md).
# Free SaaS options:
#   MongoDB: Azure Cosmos DB for MongoDB (https://azure.microsoft.com/free) — 1000 RU/s + 25 GB always free
#            MongoDB Atlas M0 (https://www.mongodb.com/atlas) — free cluster
#   Redis:   Upstash (https://upstash.com) or Redis Cloud free tier
# Both accept standard MONGODB_URL / REDIS_URL connection strings — no vendor lock-in.
backend = [
    "motor>=3.3,<4",             # async MongoDB driver; motor also installs pymongo (sync)
    "redis[asyncio]>=5,<6",      # async Redis; works with Upstash, Redis Cloud, local Redis
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "pyjwt[crypto]>=2.8,<3",
]

[project.scripts]
caretaker = "caretaker.cli:main"

[project.urls]
Homepage = "https://github.com/ianlintner/caretaker"
Documentation = "https://ianlintner.github.io/caretaker/"
Repository = "https://github.com/ianlintner/caretaker"
Issues = "https://github.com/ianlintner/caretaker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/caretaker"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "dist/",
    "schema/",
    "releases.json",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
