[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caretaker-github"
version = "0.20.0"
description = "Autonomous GitHub repository maintenance powered by Copilot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Caretaker Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27,<1",
    "pyyaml>=6,<7",
    "click>=8,<9",
    "pydantic>=2,<3",
    "anthropic>=0.40,<1",
    "packaging>=24,<25",
    # Observability — Prometheus metrics (paved-path SKILL §1-§10).
    # Both libraries are tiny (pure-Python, no C deps) and always-on so
    # operators never have to install an extra to get /metrics exposed.
    "prometheus-client>=0.20,<1",
    "prometheus-fastapi-instrumentator>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1,<2",
    "pytest-cov>=5,<6",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "respx>=0.22,<1",
    "types-PyYAML>=6,<7",
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "httpx>=0.27,<1",
    "pyjwt[crypto]>=2.8,<3",
    # Phase 1 backend deps (stubs + fake implementations used in tests)
    "motor>=3.3,<4",
    "redis[asyncio]>=5,<6",
    "types-redis>=4.6,<5",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]
# Enables the optional GitHub App front-end (JWT minting, webhook receiver).
# See docs/github-app-plan.md.
github-app = [
    "pyjwt[crypto]>=2.8,<3",
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
]
# Phase 1 — Durable state and cache (MongoDB + Redis; see docs/azure-backend-adoption-roadmap.md).
# Free SaaS options:
#   MongoDB: Azure Cosmos DB for MongoDB (https://azure.microsoft.com/free) — 1000 RU/s + 25 GB always free
#            MongoDB Atlas M0 (https://www.mongodb.com/atlas) — free cluster
#   Redis:   Upstash (https://upstash.com) or Redis Cloud free tier
# Both accept standard MONGODB_URL / REDIS_URL connection strings — no vendor lock-in.
backend = [
    "motor>=3.3,<4",             # async MongoDB driver; motor also installs pymongo (sync)
    "redis[asyncio]>=5,<6",      # async Redis; works with Upstash, Redis Cloud, local Redis
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "pyjwt[crypto]>=2.8,<3",
]
# Admin dashboard with OIDC auth and Neo4j graph store.
admin = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "authlib>=1.3,<2",           # OIDC/OAuth2 client
    "itsdangerous>=2.1,<3",      # session cookie signing
    "neo4j>=5.0,<6",             # Neo4j async driver
    "redis[asyncio]>=5,<6",      # session storage
    "httpx>=0.27,<1",            # OIDC discovery fetching
]
# Multi-provider LLM routing (OpenAI, Vertex, Azure OpenAI, Azure AI Foundry,
# Bedrock, Ollama, Mistral, Cohere, Groq, etc.) via LiteLLM.  The direct
# Anthropic SDK remains the default; install this extra and set
# ``llm.provider: litellm`` in config to enable other backends.
llm-multi = [
    "litellm>=1.83.7,<2",
    "aiohttp>=3.13.5",  # security: CVE-2026-34516 multipart header bypass + CVE-2024-52304 zip bomb
]
# Phase 3 custom coding agent — on-demand Kubernetes Job worker. See
# docs/custom-coding-agent-plan.md. Only required on the caretaker
# backend that spawns the worker Jobs; consumer repos do not need this.
k8s-worker = [
    "kubernetes>=30,<34",
]
# Workstream A4 — offline evaluation of the shadow-decision stream via
# Braintrust. The harness falls open to a local-only JSON report when
# ``BRAINTRUST_API_KEY`` is unset or this extra is not installed, so
# none of caretaker's hot paths depend on the SDK. See
# docs/plans/2026-Q2-agentic-migration.md workstream A4.
eval = [
    "braintrust>=0.0.170,<1",
]
# M8 of the memory-graph plan — OpenTelemetry GenAI agent spans. When
# installed AND ``OTEL_EXPORTER_OTLP_ENDPOINT`` is set, caretaker emits
# one ``invoke_agent`` span per agent run, mirroring the span id into
# CausalEvent rows. Default install does not pull these in — operators
# opt in by installing this extra and pointing the env var at any
# GenAI-aware backend (Phoenix, Datadog, LangSmith). See
# docs/memory-graph-plan.md §6.
otel = [
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp>=1.25,<2",
]

[project.scripts]
caretaker = "caretaker.cli:main"

[project.urls]
Homepage = "https://github.com/ianlintner/caretaker"
Documentation = "https://ianlintner.github.io/caretaker/"
Repository = "https://github.com/ianlintner/caretaker"
Issues = "https://github.com/ianlintner/caretaker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/caretaker"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "dist/",
    "schema/",
    "releases.json",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection idiom requires these callables in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path", "fastapi.Body", "fastapi.Cookie"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["neo4j", "neo4j.*", "itsdangerous", "itsdangerous.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["braintrust", "braintrust.*"]
ignore_missing_imports = true

[tool.uv]
# Security: override litellm's python-dotenv==1.0.1 pin with the patched version
# that fixes CVE-2025-14974 (symlink following in set_key/unset_key).
override-dependencies = [
    "python-dotenv>=1.2.2",
]
